GetFirst() átírása