@@ -24,7 +24,7 @@ public class Proto {
     public ArrayList<String> load(String fajlnev) {
         Palya palya = new Palya();
         ArrayList<String> output = new ArrayList<String>();
-        File f = new File("src/Data/" + fajlnev + ".txt");
+        File f = new File("projlab_pupakok/src/Data/" + fajlnev + ".txt");
         File file = new File(f.getAbsolutePath());
         try {
             FileInputStream fis = new FileInputStream(file);
@@ -446,7 +446,7 @@ public class Proto {
         palya.setToggle_random(false);
         palya.general();
         palya.leptet();
-        if(palya.getOktatok().getFirst().getSzoba().getSzomszedok().getFirst().getid().equals("42") && palya.getTakaritok().getFirst().getSzoba().getSzomszedok().getFirst().getid().equals("24"))
+        if(palya.getOktatok().get(0).getSzoba().getSzomszedok().get(0).getid().equals("42") && palya.getTakaritok().get(0).getSzoba().getSzomszedok().get(0).getid().equals("24"))
             return "A léptetés sikeres";
         return "A léptetés sikertelen";
     }
@@ -462,7 +462,7 @@ public class Proto {
      */
     String checkoutput(String bemeneti, String elvart) {
         ArrayList<String> output = load(bemeneti);
-        File f = new File("src/Data/" + elvart + ".txt");
+        File f = new File("projlab_pupakok/src/Data/" + elvart + ".txt");
         File file = new File(f.getAbsolutePath());
         ArrayList<String> elvartfajl = new ArrayList<String>();
         try {
@@ -501,7 +501,7 @@ public class Proto {
      * @return a beolvasott szövegfájl
      */
     private ArrayList<String> readMenu() {
-        File f = new File("src/Data/ProtoTestMenu.txt");
+        File f = new File("projlab_pupakok/src/Data/ProtoTestMenu.txt");
         File file = new File(f.getAbsolutePath());
         ArrayList<String> lines = new ArrayList<>();
         try {
